Move things to the GitHub SIMBRA organization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,9 +21,16 @@
   "peacock.color": "#183eff",
   "cSpell.language": "en_US,pt_BR",
   "cSpell.words": [
+    "beepr",
     "browsable",
     "comses",
+    "danielvartan",
+    "downlit",
     "fapesp",
+    "geobr",
+    "geodata",
+    "ggplot",
+    "ggsave",
     "github",
     "htmltools",
     "icmc",
@@ -36,12 +43,18 @@
     "lapply",
     "levoc",
     "linkedin",
+    "lubridate",
+    "magrittr",
+    "newwindow",
+    "orbis",
     "ragg",
+    "readr",
     "renv",
     "resiclima",
     "scipen",
     "showtext",
     "simbra",
+    "stringr",
     "sustentarea",
     "ufpi",
     "ufpr",
