--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,19 +9,17 @@ project:
   output-dir: docs
   post-render: "R/_post-render.R"
 
-# title: "SIMBRA | Brazilian Interdisciplinary Symposium on Agent-Based Models"
 title: "SIMBRA"
 description: |
   1.º Simpósio Interdisciplinar Brasileiro de Modelos Baseados em Agentes
 keyword: >
-  Science Symposium. Interdisciplinary. Agent-Based Models. Complex Systems.
-  Complexity Science. Simulations.
-
+  Simpósio. Interdisciplinaridade. Modelos Baseados em Agentes.
+  Sistemas Complexos Ciência da Complexidade. Simulações.
 website:
   favicon: images/favicon.svg
-  site-url: https://abmstudygroup.github.io/simbra-com-br/
-  repo-url: https://github.com/abmstudygroup/simbra-com-br/
-  issue-url: https://github.com/abmstudygroup/simbra-com-br/issues/
+  site-url: https://simbra.com.br/
+  repo-url: https://github.com/simbra-org/simbra-org.github.io/
+  issue-url: https://github.com/simbra-org/simbra-org.github.io/issues/
   open-graph:
     locale: pt_BR
     image: images/og-image.png
@@ -31,7 +29,6 @@ website:
   repo-branch: main
   navbar: false
   sidebar: false
-  # page-footer: "Copyright 2025, ABM Study Group"
 
 format:
   html:
@@ -50,8 +47,6 @@ format:
     include-in-header:
       text: |
         <meta property="og:description" content="">
-        <meta property="og:image" content="https://abmstudygroup.github.io/simbra-com-br/images/og-image.png">
+        <meta property="og:image" content="https://simbra-org.github.io/images/og-image.png">
         <meta property="og:image:height" content="2400">
         <meta property="og:image:width" content="1600">
-
-bibliography: references.bib
